2nd Commit - Some changes in the files

--- a/Day 2/Day 2 - Python Basics 1.ipynb
+++ b/Day 2/Day 2 - Python Basics 1.ipynb
@@ -13,7 +13,7 @@
    "id": "19e9ec83-cf6b-4000-aa3b-4b2194c2bbf1",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightgreen; color: darkgrey; padding: 10px;\">\n",
+    "<div style=\"background-color: lightgreen; color: black; padding: 10px;\">\n",
     "    <h4>What is Programming?\n",
     "</h4> </div>"
    ]
@@ -119,7 +119,7 @@
    "id": "f2d5ce6f-c4d6-4667-acbd-22a64068b2fe",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightblue; color: darkgrey; padding: 10px;\">\n",
+    "<div style=\"background-color: lightblue; color: black; padding: 10px;\">\n",
     "    <h4>What Type of Language is Python?\n",
     "</h4> </div>"
    ]
@@ -164,7 +164,7 @@
    "id": "d81f4895-3549-4e44-b866-2a0f7b684437",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightblue; color: darkgrey; padding: 10px;\">\n",
+    "<div style=\"background-color: lightblue; color: black; padding: 10px;\">\n",
     "    <h4>Why is Python So Famous?\n",
     "</h4> </div>"
    ]
