--- a/Day 2/Day 2 - Python Basics 2.ipynb
+++ b/Day 2/Day 2 - Python Basics 2.ipynb
@@ -13,7 +13,7 @@
    "id": "19e9ec83-cf6b-4000-aa3b-4b2194c2bbf1",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightgreen; color: darkgrey; padding: 10px;\">\n",
+    "<div style=\"background-color: lightgreen; color: black; padding: 10px;\">\n",
     "    <h4>Python Notebooks\n",
     "</h4> </div>"
    ]
@@ -37,7 +37,7 @@
    "id": "724c1d71-3fdb-4870-8d63-b0bfbaad9ed4",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightblue; color: darkgrey; padding: 10px;\">\n",
+    "<div style=\"background-color: lightblue; color: black; padding: 10px;\">\n",
     "    <h4>Comments\n",
     "</h4> </div>"
    ]
@@ -103,7 +103,7 @@
    "id": "f2d5ce6f-c4d6-4667-acbd-22a64068b2fe",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightblue; color: darkgrey; padding: 10px;\">\n",
+    "<div style=\"background-color: lightblue; color: black; padding: 10px;\">\n",
     "    <h2>Control Structures in Python\n",
     "</h2> </div>"
    ]
@@ -135,7 +135,7 @@
    "id": "945b575f-ebc1-4e56-a8b8-c19e9a8b7bbf",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightblue; color: darkgrey; padding: 10px;\">\n",
+    "<div style=\"background-color: lightblue; color: black; padding: 10px;\">\n",
     "    <h4> Conditionals (if-else statements)\n",
     "</h4> </div>"
    ]
@@ -233,7 +233,7 @@
    "id": "d83b45b1-015a-4d87-b897-7bf0f838a952",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightblue; color: darkgrey; padding: 10px;\">\n",
+    "<div style=\"background-color: lightblue; color: black; padding: 10px;\">\n",
     "    <h4> Loops in Python\n",
     "</h4> </div>"
    ]
@@ -398,7 +398,7 @@
    "id": "155e8ec7-547b-41f4-b6f6-6e6e719c198c",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightgreen; color: darkgrey; padding: 10px;\">\n",
+    "<div style=\"background-color: lightgreen; color: black; padding: 10px;\">\n",
     "    <h1>Let's create a simple games\n",
     "</h1> </div>"
    ]
@@ -457,7 +457,7 @@
    "id": "6ff16fd1-905d-48fb-8ef1-349c910abdbf",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightgreen; color: darkgrey; padding: 4px;\">\n",
+    "<div style=\"background-color: lightgreen; color: black; padding: 4px;\">\n",
     "    <h4>Game 1 - Rock, Paper, Scissor \n",
     "</h4> </div>"
    ]
@@ -496,7 +496,7 @@
    "id": "68d5d19e-c658-4467-8871-7f064f077bbe",
    "metadata": {},
    "source": [
-    "<div style=\"background-color: lightgreen; color: darkgrey; padding: 4px;\">\n",
+    "<div style=\"background-color: lightgreen; color: black; padding: 4px;\">\n",
     "    <h4>Game 2 - Guess the number! \n",
     "</h4> </div>"
    ]
