Day 4 inclass changes

--- a/Day 3/Day 3 - Data Analysis with Python - Part 1.ipynb
+++ b/Day 3/Day 3 - Data Analysis with Python - Part 1.ipynb
@@ -27,7 +27,7 @@
     "    <h4><b>AGENDA</b> <p><p>\n",
     "1. Introduction to Data Analysis and Python Libraries <p><p> \n",
     "2. NumPy Basics <p>\n",
-    "3. Introduction to Pandas for Data Manipulation <p>\n",
+    "3. Introduction to Pandas <p>\n",
     "4. Data Manipulation with Pandas <p>  \n",
     "</h4> </div>"
    ]
