Final Day 4 Changes

--- a/Day 4/Untitled.ipynb
+++ b/Day 4/Untitled.ipynb
@@ -260,7 +260,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 86,
+   "execution_count": 11,
    "id": "8ce5193a-ab2e-4db7-bdda-97e11a7d4c88",
    "metadata": {},
    "outputs": [],
@@ -273,7 +273,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 96,
+   "execution_count": 13,
    "id": "3bf4cac8-bb98-42e7-ac5d-874d51c4f2cc",
    "metadata": {},
    "outputs": [
@@ -365,7 +365,7 @@
        "4   5            5.0           3.6            1.4           0.2  Iris-setosa"
       ]
      },
-     "execution_count": 96,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -376,7 +376,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 98,
+   "execution_count": 15,
    "id": "38e96b62-586c-4629-b45e-ee774638bda9",
    "metadata": {},
    "outputs": [
@@ -390,9 +390,9 @@
       " #   Column         Non-Null Count  Dtype  \n",
       "---  ------         --------------  -----  \n",
       " 0   Id             150 non-null    int64  \n",
-      " 1   SepalLengthCm  150 non-null    float64\n",
-      " 2   SepalWidthCm   150 non-null    float64\n",
-      " 3   PetalLengthCm  150 non-null    float64\n",
+      " 1   SepalLengthCm  148 non-null    float64\n",
+      " 2   SepalWidthCm   147 non-null    float64\n",
+      " 3   PetalLengthCm  146 non-null    float64\n",
       " 4   PetalWidthCm   150 non-null    float64\n",
       " 5   Species        150 non-null    object \n",
       "dtypes: float64(4), int64(1), object(1)\n",
@@ -406,8 +406,34 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 17,
    "id": "7e0c6b0d-17a2-48b7-83d5-9b332d232b3a",
+   "metadata": {},
+   "outputs": [
+    {
+     "name": "stdout",
+     "output_type": "stream",
+     "text": [
+      "Id               0\n",
+      "SepalLengthCm    2\n",
+      "SepalWidthCm     3\n",
+      "PetalLengthCm    4\n",
+      "PetalWidthCm     0\n",
+      "Species          0\n",
+      "dtype: int64\n"
+     ]
+    }
+   ],
+   "source": [
+    "# Count missing values in each column\n",
+    "missing_values = df.isnull().sum()  \n",
+    "print(missing_values)"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "515e247c-9b23-4a96-a60a-8cc8e5abe832",
    "metadata": {},
    "outputs": [],
    "source": []
