--- a/Day 3/Day 3 - Data Analysis with Python - Part 1.ipynb
+++ b/Day 3/Day 3 - Data Analysis with Python - Part 1.ipynb
@@ -169,19 +169,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 1,
+   "execution_count": null,
    "id": "3ca59720-10c6-4977-a885-9b3b907f1f2b",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "NumPy version: 1.26.4\n",
-      "Pandas version: 2.2.2\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Importing the libraries\n",
     "import numpy as np\n",
@@ -198,8 +189,8 @@
    "metadata": {},
    "source": [
     "<div style=\"background-color: lightgreen; color: black; padding: 4px;\">\n",
-    "    <h4>2. NumPy Basics \n",
-    "</h4> </div>"
+    "    <h4>2. NumPy Basics\n",
+    "    </h4> </div>"
    ]
   },
   {
@@ -229,18 +220,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": null,
    "id": "3532c170-7d64-41c7-8baa-f8d16d7c212a",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "[1 2 3 4 5]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import numpy as np\n",
     "\n",
@@ -265,21 +248,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 8,
+   "execution_count": null,
    "id": "9cf26cb3-85d9-43f2-8f7e-cd38f51fa3b0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Element-wise Addition: [5 7 9]\n",
-      "Element-wise Subtraction: [-3 -3 -3]\n",
-      "Element-wise Multiplication: [ 4 10 18]\n",
-      "Element-wise Division: [0.25 0.4  0.5 ]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Example: Adding two arrays\n",
     "\n",
@@ -347,20 +319,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": null,
    "id": "241ca5aa-9512-4122-8cbc-f451170b30c0",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "1\n",
-      "3\n",
-      "[2 3 4]\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Accessing elements\n",
     "print(arr[0])  # Output: 1 (first element)\n",
@@ -416,7 +378,7 @@
    "metadata": {},
    "outputs": [],
    "source": [
-    "import pandas as pd  # Importing pandas with an alias for convenience\n"
+    "import pandas as pd  # Importing pandas with an alias for convenience"
    ]
   },
   {
@@ -436,23 +398,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 28,
+   "execution_count": null,
    "id": "171a6229-097f-4fb0-8bff-ed40ab603d72",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "Pandas Series:\n",
-      "0    10\n",
-      "1    20\n",
-      "2    30\n",
-      "3    40\n",
-      "dtype: int64\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "import pandas as pd  # Importing pandas\n",
     "\n",
@@ -475,23 +424,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 30,
+   "execution_count": null,
    "id": "ebd12462-f291-4989-ac34-407082dd34c2",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "\n",
-      "Pandas DataFrame:\n",
-      "      Name  Age         City\n",
-      "0    Alice   25     New York\n",
-      "1      Bob   30  Los Angeles\n",
-      "2  Charlie   35      Chicago\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Creating a DataFrame\n",
     "data_dict = {\n",
@@ -536,36 +472,10 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 34,
+   "execution_count": null,
    "id": "7d0ae7df-970d-457c-a938-0dfbbec768b1",
    "metadata": {},
-   "outputs": [
-    {
-     "name": "stdout",
-     "output_type": "stream",
-     "text": [
-      "First element in the Series: 10\n",
-      "\n",
-      "Accessing the 'Name' column:\n",
-      "0      Alice\n",
-      "1        Bob\n",
-      "2    Charlie\n",
-      "Name: Name, dtype: object\n",
-      "\n",
-      "Accessing the first row of the DataFrame using iloc:\n",
-      "Name       Alice\n",
-      "Age           25\n",
-      "City    New York\n",
-      "Name: 0, dtype: object\n",
-      "\n",
-      "Accessing the row with index 1 using loc:\n",
-      "Name            Bob\n",
-      "Age              30\n",
-      "City    Los Angeles\n",
-      "Name: 1, dtype: object\n"
-     ]
-    }
-   ],
+   "outputs": [],
    "source": [
     "# Accessing elements in a Series\n",
     "print(\"First element in the Series:\", series[0])  # Accessing the first element\n",
@@ -582,6 +492,28 @@
     "print(\"\\nAccessing the row with index 1 using loc:\")\n",
     "print(df.loc[1])  # Display the row with index label 1\n"
    ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "6d20db5b",
+   "metadata": {},
+   "outputs": [],
+   "source": [
+    "# Example Usages\n",
+    "df.iloc[1:10] #retrieves the first 10 entries\n",
+    "\n",
+    "\n",
+    "\n"
+   ]
+  },
+  {
+   "cell_type": "code",
+   "execution_count": null,
+   "id": "06714dd7",
+   "metadata": {},
+   "outputs": [],
+   "source": []
   },
   {
    "cell_type": "markdown",
@@ -620,7 +552,7 @@
     "import pandas as pd\n",
     "\n",
     "# Load data from a CSV file\n",
-    "df = pd.read_csv('data.csv')  # Replace 'data.csv' with your file path"
+    "df = pd.read_csv('Iris.csv')  # Replace 'data.csv' with your file path"
    ]
   },
   {
@@ -815,7 +747,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
