--- a/Day 2/Day 2 - Python Basics 4 - Functions.ipynb
+++ b/Day 2/Day 2 - Python Basics 4 - Functions.ipynb
@@ -57,18 +57,18 @@
    "id": "8cf20691-8776-46b0-81c8-a487dc0d24c4",
    "metadata": {},
    "source": [
-    "\r\n",
-    "### What is a Function?\r\n",
-    "A function is a reusable block of code that performs a specific task. Functions help organize code, make it easier to read, and allow you to reuse code without rewriting it.#\r\n",
-    "\r\n",
-    "## Defining a Function\r\n",
-    "You define a function using the `def` keyword, followed by the function name and parentheses. Inside the parentheses, you can specify **parameters** (inputs) for the function.\r\n",
-    "\r\n",
-    "### Basic Structure of a Function\r\n",
-    "```python\r\n",
-    "def function_name(parameters):\r\n",
-    "    # Code block to execute\r\n",
-    "    return result\r\n"
+    "\n",
+    "### What is a Function?\n",
+    "A function is a reusable block of code that performs a specific task. Functions help organize code, make it easier to read, and allow you to reuse code without rewriting it.\n",
+    "\n",
+    "## Defining a Function\n",
+    "You define a function using the `def` keyword, followed by the function name and parentheses. Inside the parentheses, you can specify **parameters** (inputs) for the function.\n",
+    "\n",
+    "### Basic Structure of a Function\n",
+    "```python\n",
+    "def function_name(parameters):\n",
+    "    # Code block to execute\n",
+    "    return result\n"
    ]
   },
   {
