Some changes in Previous content, and uploading content for day 6

--- a/Day 2/Day 2 - (Students) Python Basics 3 - Data Structures.ipynb
+++ b/Day 2/Day 2 - (Students) Python Basics 3 - Data Structures.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "7d0db240-6516-4193-9bba-a59d5fa2e0de",
+   "metadata": {},
+   "source": [
+    "<!--- Mohammad Idrees Bhat | Tech Skills Trainer | AI/ML Consultant --->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "ad5b9590-7e9a-4a86-a829-72a5fe04aa84",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color: #add8e6; padding: 10px; height: 70px; border-radius: 15px;\">\n",
+    "    <div style=\"font-family: 'Georgia', serif; font-size: 20px; padding: 10px; text-align: right; position: absolute; right: 20px;\">\n",
+    "        Mohammad Idrees Bhat<br>\n",
+    "        <span style=\"font-family: 'Arial', sans-serif;font-size: 12px; color: #0a0a0a;\">Tech Skills Trainer | AI/ML Consultant</span>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6360f670-cd32-417c-be26-8438195b82df",
    "metadata": {},
    "source": [
