--- a/Day 5/W2D1 - (Student) - Data Acquisition - a (SQL).ipynb
+++ b/Day 5/W2D1 - (Student) - Data Acquisition - a (SQL).ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5da74468-2915-4d2e-babd-3bbbafbca8ea",
+   "metadata": {},
+   "source": [
+    "<!--- Mohammad Idrees Bhat | Tech Skills Trainer | AI/ML Consultant --->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c4bc666-34a1-47b6-8018-1ad79dafae95",
    "metadata": {},
    "source": [
