--- a/Day 5/W2D1 - Data Acquisition - a (SQL).ipynb
+++ b/Day 5/W2D1 - Data Acquisition - a (SQL).ipynb
@@ -2,6 +2,14 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "ed6c58a2-0ea2-421d-a006-36dc1176bd24",
+   "metadata": {},
+   "source": [
+    "<!--- Mohammad Idrees Bhat | Tech Skills Trainer | AI/ML Consultant --->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8c4bc666-34a1-47b6-8018-1ad79dafae95",
    "metadata": {},
    "source": [
@@ -142,7 +150,7 @@
     "with open('people.csv', mode='w', newline='') as file:\n",
     "    writer = csv.writer(file)\n",
     "\n",
-    "    # Write the header\n",
+    "    # Write the headerj\n",
     "    writer.writerow(header)\n",
     "\n",
     "    # Write the data rows\n",
