--- a/Day 2/Day 2 - (Students) Functions - Sample & Practice Programs .ipynb
+++ b/Day 2/Day 2 - (Students) Functions - Sample & Practice Programs .ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "1d25f257-337a-49e8-98bf-efc17901e8dd",
+   "metadata": {},
+   "source": [
+    "<!--- Mohammad Idrees Bhat | Tech Skills Trainer | AI/ML Consultant --->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "8a43d5e5-3ac5-45de-a77c-992d37a10d2c",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color: #add8e6; padding: 10px; height: 70px; border-radius: 15px;\">\n",
+    "    <div style=\"font-family: 'Georgia', serif; font-size: 20px; padding: 10px; text-align: right; position: absolute; right: 20px;\">\n",
+    "        Mohammad Idrees Bhat<br>\n",
+    "        <span style=\"font-family: 'Arial', sans-serif;font-size: 12px; color: #0a0a0a;\">Tech Skills Trainer | AI/ML Consultant</span>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "8eaf0961",
    "metadata": {},
    "source": [
@@ -364,7 +385,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.11.5"
+   "version": "3.12.4"
   }
  },
  "nbformat": 4,
