--- a/Day 2/Day 2 - Python Basics 3 - Data Structures.ipynb
+++ b/Day 2/Day 2 - Python Basics 3 - Data Structures.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "6f0727c8-4e99-4335-ad47-0f4fb2980559",
+   "metadata": {},
+   "source": [
+    "<!--- Mohammad Idrees Bhat | Tech Skills Trainer | AI/ML Consultant --->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "b3c6a803-c12d-4c5e-9d38-6ceccc048a9c",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color: #add8e6; padding: 10px; height: 70px; border-radius: 15px;\">\n",
+    "    <div style=\"font-family: 'Georgia', serif; font-size: 20px; padding: 10px; text-align: right; position: absolute; right: 20px;\">\n",
+    "        Mohammad Idrees Bhat<br>\n",
+    "        <span style=\"font-family: 'Arial', sans-serif;font-size: 12px; color: #0a0a0a;\">Tech Skills Trainer | AI/ML Consultant</span>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6360f670-cd32-417c-be26-8438195b82df",
    "metadata": {},
    "source": [
