--- a/Day 3/Day 3 - Data Analysis with Python - Part 1.ipynb
+++ b/Day 3/Day 3 - Data Analysis with Python - Part 1.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "aee51b58-7274-4dda-afe5-6350e4bab23f",
+   "metadata": {},
+   "source": [
+    "<!--- Mohammad Idrees Bhat | Mohammad Idrees Bhat --->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "1cd821c5-4bda-4941-886d-c4ef90f131c9",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color: #add8e6; padding: 10px; height: 70px; border-radius: 15px;\">\n",
+    "    <div style=\"font-family: 'Georgia', serif; font-size: 20px; padding: 10px; text-align: right; position: absolute; right: 20px;\">\n",
+    "        Mohammad Idrees Bhat<br>\n",
+    "        <span style=\"font-family: 'Arial', sans-serif;font-size: 12px; color: #0a0a0a;\">Tech Skills Trainer | AI/ML Consultant</span>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6360f670-cd32-417c-be26-8438195b82df",
    "metadata": {},
    "source": [
@@ -747,7 +768,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "base",
+   "display_name": "Python 3 (ipykernel)",
    "language": "python",
    "name": "python3"
   },
