--- a/Day 4/Day 4 - (Students) Data Cleaning activity with Pandas and NumPy.ipynb
+++ b/Day 4/Day 4 - (Students) Data Cleaning activity with Pandas and NumPy.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "5078eee7-b0ef-4777-8657-00c57e7f82ea",
+   "metadata": {},
+   "source": [
+    "<!--- Mohammad Idrees Bhat | Mohammad Idrees Bhat --->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "9273f84a-ad59-4ad5-b826-12613ef16cc2",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color: #add8e6; padding: 10px; height: 70px; border-radius: 15px;\">\n",
+    "    <div style=\"font-family: 'Georgia', serif; font-size: 20px; padding: 10px; text-align: right; position: absolute; right: 20px;\">\n",
+    "        Mohammad Idrees Bhat<br>\n",
+    "        <span style=\"font-family: 'Arial', sans-serif;font-size: 12px; color: #0a0a0a;\">Tech Skills Trainer | AI/ML Consultant</span>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6360f670-cd32-417c-be26-8438195b82df",
    "metadata": {},
    "source": [
