--- a/Day 4/Day 4 - Data Cleaning  activity with Pandas and NumPy.ipynb
+++ b/Day 4/Day 4 - Data Cleaning  activity with Pandas and NumPy.ipynb
@@ -2,6 +2,27 @@
  "cells": [
   {
    "cell_type": "markdown",
+   "id": "03246955-c3c7-4b4b-8ad2-3d4402c3af08",
+   "metadata": {},
+   "source": [
+    "<!--- Mohammad Idrees Bhat | Mohammad Idrees Bhat --->"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "id": "13cb5b24-5915-43a6-bdd6-e097365ea7e1",
+   "metadata": {},
+   "source": [
+    "<div style=\"background-color: #add8e6; padding: 10px; height: 70px; border-radius: 15px;\">\n",
+    "    <div style=\"font-family: 'Georgia', serif; font-size: 20px; padding: 10px; text-align: right; position: absolute; right: 20px;\">\n",
+    "        Mohammad Idrees Bhat<br>\n",
+    "        <span style=\"font-family: 'Arial', sans-serif;font-size: 12px; color: #0a0a0a;\">Tech Skills Trainer | AI/ML Consultant</span>\n",
+    "    </div>\n",
+    "</div>"
+   ]
+  },
+  {
+   "cell_type": "markdown",
    "id": "6360f670-cd32-417c-be26-8438195b82df",
    "metadata": {},
    "source": [
