Day 6 content upload

--- a/Day 6/W2D2 - Web Scraping with Beautiful Soup.ipynb
+++ b/Day 6/W2D2 - Web Scraping with Beautiful Soup.ipynb
@@ -243,7 +243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 7,
+   "execution_count": 1,
    "id": "57d0f9ae-395c-4eff-82b4-30eb7b6c23b5",
    "metadata": {},
    "outputs": [],
@@ -343,7 +343,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 9,
+   "execution_count": 2,
    "id": "e7bf7b3b-092d-47df-82b8-5d8c50891ba5",
    "metadata": {},
    "outputs": [],
@@ -414,7 +414,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 12,
+   "execution_count": 3,
    "id": "73b4415c-2f2a-4210-bf2d-c4e28eca0dd4",
    "metadata": {},
    "outputs": [],
@@ -425,7 +425,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 14,
+   "execution_count": 4,
    "id": "39d8de41-c5ba-4368-a30a-9e5c7516e6e1",
    "metadata": {},
    "outputs": [
@@ -583,7 +583,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 16,
+   "execution_count": 5,
    "id": "b8283d84-b8ba-440d-9d04-c11d3d59e852",
    "metadata": {},
    "outputs": [],
@@ -594,7 +594,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 18,
+   "execution_count": 6,
    "id": "38472df3-3247-40e5-9652-262d3b25e128",
    "metadata": {},
    "outputs": [
@@ -613,7 +613,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 20,
+   "execution_count": 7,
    "id": "96f3a039-a20b-484a-978e-ee35f4538031",
    "metadata": {},
    "outputs": [],
@@ -624,7 +624,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 22,
+   "execution_count": 8,
    "id": "c3a86ca8-cfce-40b3-b40a-63675f371ce0",
    "metadata": {},
    "outputs": [],
@@ -651,7 +651,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 24,
+   "execution_count": 9,
    "id": "89fe0658-f415-4ca7-a989-d85a026a942a",
    "metadata": {},
    "outputs": [
@@ -678,7 +678,7 @@
        "  'Description': 'A novel set in the Great Depression that addresses serious issues of race and injustice.'}]"
       ]
      },
-     "execution_count": 24,
+     "execution_count": 9,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -689,7 +689,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 26,
+   "execution_count": 10,
    "id": "0293fcb7-5fed-4c61-a061-50d503de7f49",
    "metadata": {},
    "outputs": [
@@ -771,7 +771,7 @@
        "2  A novel set in the Great Depression that addre...  "
       ]
      },
-     "execution_count": 26,
+     "execution_count": 10,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -794,7 +794,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 29,
+   "execution_count": 11,
    "id": "7c5c4549-24be-4d6a-858d-b64e5d9715a7",
    "metadata": {},
    "outputs": [
@@ -804,7 +804,7 @@
        "'head'"
       ]
      },
-     "execution_count": 29,
+     "execution_count": 11,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -818,7 +818,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 31,
+   "execution_count": 12,
    "id": "e4a636dd-78e1-421b-bc90-f40fcb3e0c24",
    "metadata": {},
    "outputs": [
@@ -828,7 +828,7 @@
        "<a class=\"info-link\" href=\"http://example.com/gatsby\" id=\"link1\">Learn More</a>"
       ]
      },
-     "execution_count": 31,
+     "execution_count": 12,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -839,7 +839,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 33,
+   "execution_count": 13,
    "id": "e8720d8e-a53c-41c9-830f-f67d58a2d831",
    "metadata": {},
    "outputs": [
@@ -851,7 +851,7 @@
        " <a class=\"info-link\" href=\"http://example.com/mockingbird\" id=\"link3\">Learn More</a>]"
       ]
      },
-     "execution_count": 33,
+     "execution_count": 13,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -862,7 +862,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 35,
+   "execution_count": 14,
    "id": "dbd4535d-1bee-462e-ab68-cc97c7a85e9e",
    "metadata": {},
    "outputs": [
@@ -872,7 +872,7 @@
        "<a class=\"info-link\" href=\"http://example.com/mockingbird\" id=\"link3\">Learn More</a>"
       ]
      },
-     "execution_count": 35,
+     "execution_count": 14,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -883,7 +883,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 37,
+   "execution_count": 15,
    "id": "6d1e4295-935f-47fe-b446-8a0525758434",
    "metadata": {},
    "outputs": [
@@ -906,7 +906,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 39,
+   "execution_count": 16,
    "id": "ae2823b7-d2a8-47e2-89d4-e011fcf94204",
    "metadata": {},
    "outputs": [
@@ -929,7 +929,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 43,
+   "execution_count": 17,
    "id": "7b4b4d99-ef1d-4e95-9329-377703babb9d",
    "metadata": {},
    "outputs": [
@@ -939,7 +939,7 @@
        "'\\n\\n\\n\\n\\nSample Books Data\\n\\n\\n\\nBooks List\\n\\n\\nThe Great Gatsby\\n\\nAuthor: F. Scott Fitzgerald\\nPrice: $10.99\\nPublication Year: 1925\\nGenre: Fiction\\n\\n            A novel about the American dream, set in the 1920s on Long Island.\\n        \\nMore Info: Learn More\\n\\n\\n\\n1984\\n\\nAuthor: George Orwell\\nPrice: $8.99\\nPublication Year: 1949\\nGenre: Dystopian\\n\\n            A story about a totalitarian regime that uses surveillance and propaganda to control its citizens.\\n        \\nMore Info: Learn More\\n\\n\\n\\nTo Kill a Mockingbird\\n\\nAuthor: Harper Lee\\nPrice: $7.99\\nPublication Year: 1960\\nGenre: Fiction\\n\\n            A novel set in the Great Depression that addresses serious issues of race and injustice.\\n        \\nMore Info: Learn More\\n\\n\\n\\n'"
       ]
      },
-     "execution_count": 43,
+     "execution_count": 17,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -951,7 +951,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
+   "execution_count": 18,
    "id": "58b098b0-8ca6-4496-b68a-55c233ad075c",
    "metadata": {},
    "outputs": [
@@ -1071,7 +1071,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 62,
+   "execution_count": 19,
    "id": "54017d69-fe26-4d7c-af86-a76db3fa16f0",
    "metadata": {},
    "outputs": [],
@@ -1092,7 +1092,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 95,
+   "execution_count": 20,
    "id": "dcba2e1f-560e-471b-a967-dca1caf67f7f",
    "metadata": {},
    "outputs": [],
@@ -1103,7 +1103,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 97,
+   "execution_count": 21,
    "id": "97cd64e8-a325-45b9-98a5-7acbc374d5d3",
    "metadata": {},
    "outputs": [],
@@ -1114,7 +1114,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 99,
+   "execution_count": 22,
    "id": "5481bd9b-06ca-4706-9def-d9ec904f2e96",
    "metadata": {},
    "outputs": [
@@ -1136,7 +1136,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 102,
+   "execution_count": 23,
    "id": "908bee2b-eaf6-440d-9c90-e0be4ef59749",
    "metadata": {},
    "outputs": [],
@@ -1159,7 +1159,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 124,
+   "execution_count": 24,
    "id": "f6e2e515-94bf-4e15-81dd-a5cda02d1ff5",
    "metadata": {},
    "outputs": [
@@ -1169,7 +1169,7 @@
        "<Response [200]>"
       ]
      },
-     "execution_count": 124,
+     "execution_count": 24,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1182,7 +1182,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 126,
+   "execution_count": 25,
    "id": "2f5dd874-6743-4128-b38f-96102e5b1e63",
    "metadata": {},
    "outputs": [
@@ -1212,7 +1212,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 161,
+   "execution_count": 26,
    "id": "4341cbbb-7495-41c3-beb4-1cc5ac13be4c",
    "metadata": {},
    "outputs": [],
@@ -1224,7 +1224,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": null,
+   "execution_count": 27,
    "id": "40b68e25-c73d-4bf8-8619-d4b8abb775c3",
    "metadata": {},
    "outputs": [],
@@ -1243,7 +1243,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 170,
+   "execution_count": 28,
    "id": "a3d62373-ffd3-41df-ade0-1e8d64199504",
    "metadata": {},
    "outputs": [
@@ -1253,7 +1253,7 @@
        "[]"
       ]
      },
-     "execution_count": 170,
+     "execution_count": 28,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1282,10 +1282,22 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 173,
+   "execution_count": 29,
    "id": "bf33ca6b-4b25-4df1-8f1a-0dec90d4297a",
    "metadata": {},
-   "outputs": [],
+   "outputs": [
+    {
+     "ename": "NameError",
+     "evalue": "name 'movie_rows' is not defined",
+     "output_type": "error",
+     "traceback": [
+      "\u001b[1;31m---------------------------------------------------------------------------\u001b[0m",
+      "\u001b[1;31mNameError\u001b[0m                                 Traceback (most recent call last)",
+      "Cell \u001b[1;32mIn[29], line 2\u001b[0m\n\u001b[0;32m      1\u001b[0m \u001b[38;5;66;03m# Loop through the rows to extract movie information\u001b[39;00m\n\u001b[1;32m----> 2\u001b[0m \u001b[38;5;28;01mfor\u001b[39;00m row \u001b[38;5;129;01min\u001b[39;00m movie_rows:\n\u001b[0;32m      3\u001b[0m     \u001b[38;5;66;03m# Extract title\u001b[39;00m\n\u001b[0;32m      4\u001b[0m     title_column \u001b[38;5;241m=\u001b[39m row\u001b[38;5;241m.\u001b[39mfind(\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtd\u001b[39m\u001b[38;5;124m'\u001b[39m, class_\u001b[38;5;241m=\u001b[39m\u001b[38;5;124m'\u001b[39m\u001b[38;5;124mtitleColumn\u001b[39m\u001b[38;5;124m'\u001b[39m)\n\u001b[0;32m      5\u001b[0m     \u001b[38;5;28;01mif\u001b[39;00m title_column:  \u001b[38;5;66;03m# Check if title_column is not None\u001b[39;00m\n",
+      "\u001b[1;31mNameError\u001b[0m: name 'movie_rows' is not defined"
+     ]
+    }
+   ],
    "source": [
     "# Loop through the rows to extract movie information\n",
     "for row in movie_rows:\n",
@@ -1308,7 +1320,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 175,
+   "execution_count": 31,
    "id": "985a7032-e539-4588-b039-dcb68a1ab909",
    "metadata": {},
    "outputs": [
@@ -1355,7 +1367,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 234,
+   "execution_count": 32,
    "id": "f8e82fc7-e0b0-43fe-8bcd-40511d609337",
    "metadata": {},
    "outputs": [],
@@ -1378,31 +1390,33 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 191,
+   "execution_count": 38,
    "id": "ce2883ce-03fd-4d2f-81ee-9f6632f44da8",
    "metadata": {},
    "outputs": [],
    "source": [
     "# Find the JSON data in the script tag\n",
+    "import json\n",
+    "\n",
     "json_data = soup.find('script', type='application/ld+json')"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 195,
+   "execution_count": 44,
    "id": "796a0807-4f49-4e84-abbb-6f12ba2c636b",
    "metadata": {},
    "outputs": [],
    "source": [
     "if json_data:\n",
     "    # Parse the JSON data\n",
-    "    data = json.loads(json_data.string)\n",
-    "# data # observe data"
+    "    data = json.loads(json_data.string) \n",
+    "#data # observe data"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 225,
+   "execution_count": 40,
    "id": "dc75c348-433a-42c3-9da7-a75f159fafca",
    "metadata": {},
    "outputs": [],
@@ -1428,7 +1442,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 228,
+   "execution_count": 45,
    "id": "7a848e0e-41f7-4907-8085-a9ee22d2fcd3",
    "metadata": {},
    "outputs": [],
@@ -1462,7 +1476,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 230,
+   "execution_count": 46,
    "id": "39ee65bd-6af6-4a2f-80a8-8c79945a9777",
    "metadata": {},
    "outputs": [
@@ -1580,7 +1594,7 @@
        "4             1     9.0          Crime, Drama  PT1H36M  "
       ]
      },
-     "execution_count": 230,
+     "execution_count": 46,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -1614,7 +1628,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 236,
+   "execution_count": 47,
    "id": "1cd06cfa-ef1c-4014-8e5c-c144c62edfc6",
    "metadata": {},
    "outputs": [
@@ -1841,31 +1855,31 @@
    "id": "d4e08c3f-3e5b-46a6-9fbb-456cbd850553",
    "metadata": {},
    "source": [
-    "\r\n",
-    "1. Topic: BeautifulSoup vs. Selenium\r\n",
-    "   Question: What are the key differences between using `BeautifulSoup` and `Selenium` for web scraping? When would you use each?\r\n",
-    "\r\n",
-    "2. Topic: Dynamic Content\r\n",
-    "   Question: How do you handle web pages with dynamic content (e.g., loaded via JavaScript) while scraping using Pyh3 task?\r\n",
-    "\r\n",
-    "4. Topic: Navigating HTML\r\n",
-    "   Question: What methods are available in `BeautifulSoup` to navigate through an HTML document? Can you explain the difference between `find`, `find_all`, and CSS 4electors?\r\n",
-    "\r\n",
-    "5. Topic: Efficiency\r\n",
-    "   Question: When scraping data with `BeautifulSoup`, how would you handle large HTML documents efficiently to avoid m5mory issues?\r\n",
-    "\r\n",
-    "6. Topic: Pandas DataFrame\r\n",
-    "   Question: How can you convert a list of extracted data into a Pandas DataFrame, and what are the common issues you might face 6hen doing this?\r\n",
-    "\r\n",
-    "7. Topic: Scraping Authentication\r\n",
-    "   Question: What are some common challenges you face when scraping websites that require login? How would you ha7dle such websites?\r\n",
-    "\r\n",
-    "8. Topic: Nested HTML Tags\r\n",
-    "   Question: How would you extract specific data, such as text from nested HTML tags, using `BeautifulSoup`? Provide an example of handling d8eply nested elements.\r\n",
-    "\r\n",
-    "9. Topic: Legal and Ethical Considerations\r\n",
-    "   Question: What are the legal and ethical considerations to keep in mind whing missing or malformed data?\r\n",
-    "r malformed data?**\r\n"
+    "\n",
+    "1. Topic: BeautifulSoup vs. Selenium\n",
+    "   Question: What are the key differences between using `BeautifulSoup` and `Selenium` for web scraping? When would you use each?\n",
+    "\n",
+    "2. Topic: Dynamic Content\n",
+    "   Question: How do you handle web pages with dynamic content (e.g., loaded via JavaScript) while scraping using Pyh3 task?\n",
+    "\n",
+    "4. Topic: Navigating HTML\n",
+    "   Question: What methods are available in `BeautifulSoup` to navigate through an HTML document? Can you explain the difference between `find`, `find_all`, and CSS 4electors?\n",
+    "\n",
+    "5. Topic: Efficiency\n",
+    "   Question: When scraping data with `BeautifulSoup`, how would you handle large HTML documents efficiently to avoid m5mory issues?\n",
+    "\n",
+    "6. Topic: Pandas DataFrame\n",
+    "   Question: How can you convert a list of extracted data into a Pandas DataFrame, and what are the common issues you might face 6hen doing this?\n",
+    "\n",
+    "7. Topic: Scraping Authentication\n",
+    "   Question: What are some common challenges you face when scraping websites that require login? How would you ha7dle such websites?\n",
+    "\n",
+    "8. Topic: Nested HTML Tags\n",
+    "   Question: How would you extract specific data, such as text from nested HTML tags, using `BeautifulSoup`? Provide an example of handling d8eply nested elements.\n",
+    "\n",
+    "9. Topic: Legal and Ethical Considerations\n",
+    "   Question: What are the legal and ethical considerations to keep in mind whing missing or malformed data?\n",
+    "r malformed data?**\n"
    ]
   },
   {
@@ -1932,7 +1946,7 @@
  ],
  "metadata": {
   "kernelspec": {
-   "display_name": "Python 3 (ipykernel)",
+   "display_name": "base",
    "language": "python",
    "name": "python3"
   },
