day 6 content upload

--- a/Day 6/W2D2 - (Student) - Web Scraping with Beautiful Soup.ipynb
+++ b/Day 6/W2D2 - (Student) - Web Scraping with Beautiful Soup.ipynb
@@ -1384,6 +1384,8 @@
    "outputs": [],
    "source": [
     "# Find the JSON data in the script tag\n",
+    "import json\n",
+    "\n",
     "json_data = soup.find('script', type='application/ld+json')"
    ]
   },
@@ -1766,31 +1768,31 @@
    "id": "d4e08c3f-3e5b-46a6-9fbb-456cbd850553",
    "metadata": {},
    "source": [
-    "\r\n",
-    "1. Topic: BeautifulSoup vs. Selenium\r\n",
-    "   Question: What are the key differences between using `BeautifulSoup` and `Selenium` for web scraping? When would you use each?\r\n",
-    "\r\n",
-    "2. Topic: Dynamic Content\r\n",
-    "   Question: How do you handle web pages with dynamic content (e.g., loaded via JavaScript) while scraping using Pyh3 task?\r\n",
-    "\r\n",
-    "4. Topic: Navigating HTML\r\n",
-    "   Question: What methods are available in `BeautifulSoup` to navigate through an HTML document? Can you explain the difference between `find`, `find_all`, and CSS 4electors?\r\n",
-    "\r\n",
-    "5. Topic: Efficiency\r\n",
-    "   Question: When scraping data with `BeautifulSoup`, how would you handle large HTML documents efficiently to avoid m5mory issues?\r\n",
-    "\r\n",
-    "6. Topic: Pandas DataFrame\r\n",
-    "   Question: How can you convert a list of extracted data into a Pandas DataFrame, and what are the common issues you might face 6hen doing this?\r\n",
-    "\r\n",
-    "7. Topic: Scraping Authentication\r\n",
-    "   Question: What are some common challenges you face when scraping websites that require login? How would you ha7dle such websites?\r\n",
-    "\r\n",
-    "8. Topic: Nested HTML Tags\r\n",
-    "   Question: How would you extract specific data, such as text from nested HTML tags, using `BeautifulSoup`? Provide an example of handling d8eply nested elements.\r\n",
-    "\r\n",
-    "9. Topic: Legal and Ethical Considerations\r\n",
-    "   Question: What are the legal and ethical considerations to keep in mind whing missing or malformed data?\r\n",
-    "r malformed data?**\r\n"
+    "\n",
+    "1. Topic: BeautifulSoup vs. Selenium\n",
+    "   Question: What are the key differences between using `BeautifulSoup` and `Selenium` for web scraping? When would you use each?\n",
+    "\n",
+    "2. Topic: Dynamic Content\n",
+    "   Question: How do you handle web pages with dynamic content (e.g., loaded via JavaScript) while scraping using Pyh3 task?\n",
+    "\n",
+    "4. Topic: Navigating HTML\n",
+    "   Question: What methods are available in `BeautifulSoup` to navigate through an HTML document? Can you explain the difference between `find`, `find_all`, and CSS 4electors?\n",
+    "\n",
+    "5. Topic: Efficiency\n",
+    "   Question: When scraping data with `BeautifulSoup`, how would you handle large HTML documents efficiently to avoid m5mory issues?\n",
+    "\n",
+    "6. Topic: Pandas DataFrame\n",
+    "   Question: How can you convert a list of extracted data into a Pandas DataFrame, and what are the common issues you might face 6hen doing this?\n",
+    "\n",
+    "7. Topic: Scraping Authentication\n",
+    "   Question: What are some common challenges you face when scraping websites that require login? How would you ha7dle such websites?\n",
+    "\n",
+    "8. Topic: Nested HTML Tags\n",
+    "   Question: How would you extract specific data, such as text from nested HTML tags, using `BeautifulSoup`? Provide an example of handling d8eply nested elements.\n",
+    "\n",
+    "9. Topic: Legal and Ethical Considerations\n",
+    "   Question: What are the legal and ethical considerations to keep in mind whing missing or malformed data?\n",
+    "r malformed data?**\n"
    ]
   },
   {
