--- a/Day 5/W2D1 - (Student) Data Acquisition - b (APIs).ipynb
+++ b/Day 5/W2D1 - (Student) Data Acquisition - b (APIs).ipynb
@@ -28,7 +28,7 @@
    "source": [
     "<h2 style=\"background-color: #002147; padding: 20px; text-align: center; color: white; font-size: 32px; font-family: 'Arial', sans-serif;\">\n",
     "    Data Acquisition: Understanding data sources, using SQL and APIs\n",
-    "</h2>\r\n"
+    "</h2>\n"
    ]
   },
   {
@@ -79,24 +79,24 @@
    "id": "1bd7bf3d-ea0e-4959-8448-ac666514452f",
    "metadata": {},
    "source": [
-    "\r\n",
-    "An **API (Application Programming Interface)** is a set of rules and protocols that allows one piece of software to interact with another. It defines methods and data formats that applications can use to communicate with external services.\r\n",
-    "\r\n",
-    "APIs are commonly used to retrieve or send data between different systems. For example, a weather application on your phone can use an API to get real-time weather updates from a server.\r\n",
-    "\r\n",
-    "- **Key Points:**\r\n",
-    "  - APIs allow different systems to communicate and share data.\r\n",
-    "  - APIs can be used to automate data retrieval and integration into an analysis pipeline.\r\n",
-    "  - Most APIs work over the internet using protocols like HTTP.\r\n",
-    "\r\n",
-    "#### Simple Analogy:\r\n",
-    "Think of an API as a **waiter in a restaurant**. When you visit a restaurant, you don't go into the kitchen and cook your own food. Instead, you tell the waiter what you want, and they take your request to the kitchen. The kitchen prepares your food and the waiter brings it back to you. \r\n",
-    "\r\n",
-    "In this analogy:\r\n",
-    "- **You** are the software making a request.\r\n",
-    "- **The waiter** is the API.\r\n",
-    "- **The kitchen** is the server or external system providing data.\r\n",
-    "- **The food** is thee, humidity, and forecast.\r\n"
+    "\n",
+    "An **API (Application Programming Interface)** is a set of rules and protocols that allows one piece of software to interact with another. It defines methods and data formats that applications can use to communicate with external services.\n",
+    "\n",
+    "APIs are commonly used to retrieve or send data between different systems. For example, a weather application on your phone can use an API to get real-time weather updates from a server.\n",
+    "\n",
+    "- **Key Points:**\n",
+    "  - APIs allow different systems to communicate and share data.\n",
+    "  - APIs can be used to automate data retrieval and integration into an analysis pipeline.\n",
+    "  - Most APIs work over the internet using protocols like HTTP.\n",
+    "\n",
+    "#### Simple Analogy:\n",
+    "Think of an API as a **waiter in a restaurant**. When you visit a restaurant, you don't go into the kitchen and cook your own food. Instead, you tell the waiter what you want, and they take your request to the kitchen. The kitchen prepares your food and the waiter brings it back to you. \n",
+    "\n",
+    "In this analogy:\n",
+    "- **You** are the software making a request.\n",
+    "- **The waiter** is the API.\n",
+    "- **The kitchen** is the server or external system providing data.\n",
+    "- **The food** is thee, humidity, and forecast.\n"
    ]
   },
   {
@@ -444,7 +444,7 @@
     "import pandas as pd\n",
     "\n",
     "# Your OpenWeatherMap API key\n",
-    "api_key = \"154efb44830a0c05dc04eba77d69f205\""
+    "api_key = \"put_in_your_own_key\""
    ]
   },
   {
@@ -454,7 +454,7 @@
    "metadata": {},
    "outputs": [
     {
-     "name": "stdin",
+     "name": "stdout",
      "output_type": "stream",
      "text": [
       "Which city's weather do you want? gg\n"
@@ -1033,7 +1033,7 @@
    "id": "d4e08c3f-3e5b-46a6-9fbb-456cbd850553",
    "metadata": {},
    "source": [
-    "companies like **Google** and **IBM**.\r\n"
+    "companies like **Google** and **IBM**.\n"
    ]
   },
   {
